fixing tab alignment

--- a/style/about.css
+++ b/style/about.css
@@ -433,7 +433,6 @@ body {
         width: 90%; 
         height: auto; 
         margin-top: 10%;
-        height: auto; 
         display: grid;
         justify-items: center;
     }
@@ -542,12 +541,13 @@ body {
 }
 @media screen and (max-width: 480px) {
     .coursework_tab {
-        width: 60%;
+        width: 50%;
         height: auto;
         text-align: center;
         font-size: 20px;
         margin-top: 8%;
         margin-right: 0%;
+        margin-left: 0%;
     }
 }
 @media screen and (min-width: 481px) {
